Fix green outline + text wrapping bug

--- a/styles/BellSchedule.module.css
+++ b/styles/BellSchedule.module.css
@@ -12,7 +12,7 @@
 	padding-top: 50px;
 	padding-bottom: 30px;
 	margin-top: auto;
-	border: 1px solid darkgreen;
+	border: 1px solid black;
 	border-radius: 10px;
 }
 
